feat: users CRUD fully implemented and test.sh working

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
     "rootDir": "./src",
     "strict": true,
     "strictPropertyInitialization": false,
-    "moduleResolution": "node",
+    "moduleResolution": "bundler",
     "esModuleInterop": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
